Fix: fix z-index of header to higher

--- a/src/sass/tamplates/_header.scss
+++ b/src/sass/tamplates/_header.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 3;
+  z-index: 11;
   display: flex;
   align-items: center;
   background-color: $dark;
